refactor: rename files and remove 'baseline' from filenames

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - data: swinTransformer
-  - model: swinTransformer
+  - data: convnext
+  - model: convnext
   - optimizer: adamw
   - trainer: trainer
   - loss: focalloss
