feat: add efficientnet model, configs

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - data: convnext
-  - model: convnext
+  - data: efficientnet
+  - model: efficientnet
   - optimizer: adamw
   - trainer: trainer
   - loss: focalloss
