--- a/configs/trainer/trainer.yaml
+++ b/configs/trainer/trainer.yaml
@@ -2,6 +2,7 @@ max_epochs: 100
 freeze_epochs: 10
 use_ema: true
 ema_update_epochs: 0
-use_mixup: true
+use_mixup: false
 hnm:
+  use_hnm: true
   stop_epoch: 10
